Updated example to have some more config set

--- a/example/app/views/customers/index.html.erb
+++ b/example/app/views/customers/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Listing customers</h1>
 
+<h5>Summary</h5>
 <%= render_hash_to_overview(:customers, @customers) %>
+<h5>Payload</h5>
 <%= render_hash_to_table(@customers) %>
 
 <br />
