--- a/example/app/views/orders/index.html.erb
+++ b/example/app/views/orders/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Listing orders</h1>
 
+<h5>Summary</h5>
 <%= render_hash_to_overview(:orders, @orders) %>
+<h5>Payload</h5>
 <%= render_hash_to_table(@orders) %>
 
 <br />
